--- a/src/app/features/matches/components/detail/tabs/match-players-tab.component.less
+++ b/src/app/features/matches/components/detail/tabs/match-players-tab.component.less
@@ -174,6 +174,15 @@
     }
   }
 
+  &__player-toggle {
+    flex-shrink: 0;
+    margin-left: auto;
+
+    &--bench {
+      margin-left: 0.5rem;
+    }
+  }
+
   &__position-chip {
     align-self: flex-start;
   }
