--- a/src/app/features/matches/components/edit/match-edit.component.html
+++ b/src/app/features/matches/components/edit/match-edit.component.html
@@ -10,6 +10,6 @@
   [sponsorLines]="sponsorLines()"
   [match]="match()"
   [loading]="loading()"
-  (submit)="onSubmit($event)"
-  (cancel)="cancel()"
+  (submitted)="onSubmit($event)"
+  (cancelled)="cancel()"
 />
