--- a/src/app/features/scoreboard/pages/admin/scoreboard-admin.component.less
+++ b/src/app/features/scoreboard/pages/admin/scoreboard-admin.component.less
@@ -75,6 +75,12 @@
   flex: 1;
 }
 
+.forms-header {
+  display: flex;
+  justify-content: flex-end;
+  margin-bottom: 16px;
+}
+
 .forms-grid {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
