feat(scoreboard): add sponsor line display components

--- a/src/app/features/scoreboard/components/display/scoreboard-display.component.html
+++ b/src/app/features/scoreboard/components/display/scoreboard-display.component.html
@@ -162,4 +162,24 @@
       </div>
     }
   </div>
+
+  @if (showSponsorLine() || showMatchSponsorLine()) {
+    <div class="sponsor-lines">
+      @if (showSponsorLine()) {
+        <app-sponsor-line
+          [line]="sponsorLine()"
+          [sponsor]="tournamentSponsor()"
+          [scale]="sponsorLineScale()"
+        />
+      }
+
+      @if (showMatchSponsorLine()) {
+        <app-match-sponsor-line-display-flat
+          [line]="matchSponsorLine()"
+          [sponsor]="matchSponsor()"
+          [scale]="matchSponsorLineScale()"
+        />
+      }
+    </div>
+  }
 </div>
