--- a/src/app/features/scoreboard/pages/view/scoreboard-view.component.html
+++ b/src/app/features/scoreboard/pages/view/scoreboard-view.component.html
@@ -13,6 +13,7 @@
       [gameClock]="gameClockSeconds()"
       [playClock]="playClockSeconds()"
       [tournamentLogo]="tournamentLogo()"
+      [tournamentSponsorLogo]="tournamentSponsorLogo()"
       displayClass="fullhd-scoreboard"
     />
   }
